syntax = "proto2";

package tbclient;

import "tbclient/ZhiBoInfoTW.proto";

message AnchorInfo {
  optional int64 author_id = 5;
  optional string author_name = 6;
  optional string forumName = 14;
  optional int32 from_type = 15;
  optional int32 group_id = 9;
  optional string intro = 10;
  optional int32 is_vip = 16;
  optional int32 label_id = 17;
  optional string label_name = 18;
  optional int32 likers = 8;
  optional int32 listeners = 7;
  optional string name = 2;
  optional string portrait = 1;
  optional int64 publisherId = 13;
  optional string publisherName = 12;
  optional string publisherPortrait = 11;
  optional int32 start_time = 3;
  optional int32 status = 4;
  required ZhiBoInfoTW twzhibo_info = 20;
  optional int32 type = 19;
}
